@startuml
title Command Pattern - GUI Actions

skinparam classAttributeIconSize 0
skinparam shadowing false

interface Command <<Command>> {
  + execute(): void
}

class ReserveEquipmentCommand
class ModifyBookingCommand
class CancelBookingCommand
class ExtendBookingCommand
class AddEquipmentCommand
class UpdateEquipmentStatusCommand
class AutoGenerateLabManagerCommand
class UpdateIdOrCertCommand

class GUIController {
  + submit(command: Command): void
}

class ReservationSystem

Command <|.. ReserveEquipmentCommand
Command <|.. ModifyBookingCommand
Command <|.. CancelBookingCommand
Command <|.. ExtendBookingCommand
Command <|.. AddEquipmentCommand
Command <|.. UpdateEquipmentStatusCommand
Command <|.. AutoGenerateLabManagerCommand
Command <|.. UpdateIdOrCertCommand

GUIController --> Command
ReserveEquipmentCommand --> ReservationSystem
ModifyBookingCommand --> ReservationSystem
CancelBookingCommand --> ReservationSystem
ExtendBookingCommand --> ReservationSystem
AddEquipmentCommand --> ReservationSystem
UpdateEquipmentStatusCommand --> ReservationSystem
AutoGenerateLabManagerCommand --> ReservationSystem
UpdateIdOrCertCommand --> ReservationSystem
@enduml
